@@ -2,6 +2,9 @@ Version 0.84.xxxxx - xx.xx.2010
 
     * Updated libvpx to 0.9.2
     * Updated webmdshow to 0.9.10
+    * Updated libtheora to 1.2.0 alpha (SVN)
+    * Updated libtremor
+    * Added "controls" attribute to HTML5 <video> ActiveX plugin
 
 Version 0.84.17359 - 04.08.2010
     
